--- a/RedNose/front/index.html
+++ b/RedNose/front/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Index of/</title>
 </head>
+
 <body>
-<script src="sketch.js"></script>
+<ul>
+    <li><a href="/stream">Start Stream</a></li>
+    <li><a href="/view">View Stream</a></li>
+</ul>
 </body>
 </html>
