--- a/RedNose/front/stream.html
+++ b/RedNose/front/stream.html
@@ -27,7 +27,8 @@
 
     var video = document.getElementById("video");
 
-    var socket = io('ws://localhost:8001');
+    // var socket = io('ws://localhost:8001');
+    var socket = io('ws://fun-websockets.herokuapp.com:3001');
 
     function logger(msg){
         $('#log').text(msg);
