--- a/RedNose/front/view.html
+++ b/RedNose/front/view.html
@@ -16,6 +16,7 @@
 
 <script type="text/javascript">
 
+    // var socket = io('ws://localhost:3001');
     var socket = io('ws://fun-websockets.herokuapp.com:3001');
 
     socket.on('stream',function(image){
